View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029743 | Open CASCADE | OCCT:Inspectors | public | 2018-05-08 14:41 | 2018-07-05 10:06 |
Reporter | nds | Assigned To | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029743: Samples - Inspector tool - crash by selecting TNaming_UsedShapes tree item | ||||
Description | After opening attached file in inspector and selection of TNaming_UsedShapes attribute, the tool is crashed. | ||||
Steps To Reproduce | tests/tools/dfbrowser/A7 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
related to | 0029733 | closed | TInspector can't open several cbf files |
|
Branch CR29743 has been created by nds. SHA-1: ff4dca2ef55449eb900b01bfc18a22125d77300f No new revisions were added by this update. |
|
Branch CR29743 has been updated by nds. SHA-1: 3585c78e07c1d74af2547ee4ea259c3cba2300b9 Detailed log of new commits: Author: nds Date: Tue May 8 14:54:18 2018 +0300 0029743: Samples - Inspector tool - crash by selecting TNaming_UsedShapes tree item - TNaming_UsedShapes is corrected to do not call methods of empty TopoDS_Shape - DFBrowserPane presentation tree item for this is corrected in the same way and obsolete methods of processing SortedReferences are removed. |
|
Branch CR29743 has been updated by nds. SHA-1: 0c504ee5cd656a2f809267c1a8a6ccd55b028075 Detailed log of new commits: Author: nds Date: Tue May 8 15:12:45 2018 +0300 # test case |
|
bug29743.cbf (163,277 bytes) |
|
Branch CR29743_1 has been created by nds. SHA-1: f553e187b384b91fae74ca92c23cebd4ef0aa95f Detailed log of new commits: Author: nds Date: Tue May 8 15:19:28 2018 +0300 0029743: Samples - Inspector tool - crash by selecting TNaming_UsedShapes tree item - TNaming_UsedShapes is corrected to do not call methods of empty TopoDS_Shape - DFBrowserPane presentation tree item for this is corrected in the same way and obsolete methods of processing SortedReferences are removed. |
|
Please, review modifications |
|
The line anOS << "Empty Shape" << endl; gives nothing. I suggest like this: TCollection_AsciiString entry =...; // put entry of the label with null shape anOS << "Empty Shape at label = " << entry.ToCString() <<endl; |
|
Branch CR29743_2 has been created by nds. SHA-1: 32a023aa1f32e2bc0090568f14bba3d442f741d0 Detailed log of new commits: Author: nds Date: Tue May 8 17:55:09 2018 +0300 0029743: Samples - Inspector tool - crash by selecting TNaming_UsedShapes tree item - TNaming_UsedShapes is corrected to do not call methods of empty TopoDS_Shape - TNaming_NamedShape is corrected to have not NULL TNaming_RefShape even if TopoDS_Shape is NULL(TNaming_Builder::Delete). - DFBrowserPane presentation tree item for this is corrected in the same way and obsolete methods of processing SortedReferences are removed. |
|
Could you please, review modifications once again. |
|
Jenkins for Branch CR29743_2 is in: http://jenkins-test-11.nnov.opencascade.com:8080/view/CR29743_1-master-NDS/ |
|
Reviewed. |
|
Combination - OCCT branch : CR29743_2 SHA - 32a023aa1f32e2bc0090568f14bba3d442f741d0 Products branch : master SHA - 300cf879a836fb8a5c4636713070ca9cf544749f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 18246.29000000006 / 18243.73999999987 [+0.01%] Products Total CPU difference: 0 / 0 Windows-64-VC10: OCCT Total CPU difference: 18071.358641298586 / 18049.78370299853 [+0.12%] Products Total CPU difference: 7683.610853599943 / 7697.713343999945 [-0.18%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29743 has been deleted by kgv. SHA-1: 0c504ee5cd656a2f809267c1a8a6ccd55b028075 |
|
Branch CR29743_1 has been deleted by kgv. SHA-1: f553e187b384b91fae74ca92c23cebd4ef0aa95f |
|
Branch CR29743_2 has been deleted by kgv. SHA-1: 32a023aa1f32e2bc0090568f14bba3d442f741d0 |
occt: master 26b004e9 2018-05-08 14:55:09
Committer: abv Details Diff |
0029743: Samples - Inspector tool - crash by selecting TNaming_UsedShapes tree item - TNaming_UsedShapes is corrected to do not call methods of empty TopoDS_Shape - TNaming_NamedShape is corrected to have not NULL TNaming_RefShape even if TopoDS_Shape is NULL(TNaming_Builder::Delete). - DFBrowserPane presentation tree item for this is corrected in the same way and obsolete methods of processing SortedReferences are removed. |
Affected Issues 0029743 |
|
mod - src/TNaming/TNaming_NamedShape.cxx | Diff File | ||
mod - src/TNaming/TNaming_UsedShapes.cxx | Diff File | ||
add - tests/tools/dfbrowser/A7 | Diff File | ||
mod - tools/DFBrowserPane/DFBrowserPane_TNamingUsedShapes.cxx | Diff File | ||
mod - tools/DFBrowserPane/DFBrowserPane_TNamingUsedShapes.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-05-08 14:41 | nds | New Issue | |
2018-05-08 14:41 | nds | Assigned To | => bugmaster |
2018-05-08 14:42 | nds | Relationship added | related to 0029733 |
2018-05-08 14:48 | git | Note Added: 0075880 | |
2018-05-08 14:54 | git | Note Added: 0075881 | |
2018-05-08 15:12 | git | Note Added: 0075883 | |
2018-05-08 15:14 | nds | File Added: bug29743.cbf | |
2018-05-08 15:19 | git | Note Added: 0075884 | |
2018-05-08 15:21 | nds | Note Added: 0075885 | |
2018-05-08 15:21 | nds | Assigned To | bugmaster => szy |
2018-05-08 15:21 | nds | Status | new => resolved |
2018-05-08 15:21 | nds | Steps to Reproduce Updated | |
2018-05-08 16:40 |
|
Note Added: 0075893 | |
2018-05-08 16:40 |
|
Assigned To | szy => nds |
2018-05-08 16:40 |
|
Status | resolved => assigned |
2018-05-08 17:55 | git | Note Added: 0075895 | |
2018-05-08 17:58 | nds | Note Added: 0075896 | |
2018-05-08 17:58 | nds | Assigned To | nds => szy |
2018-05-08 17:58 | nds | Status | assigned => resolved |
2018-05-10 11:18 | nds | Note Added: 0075919 | |
2018-05-11 12:10 |
|
Note Added: 0075939 | |
2018-05-11 12:10 |
|
Assigned To | szy => bugmaster |
2018-05-11 12:10 |
|
Status | resolved => reviewed |
2018-05-23 11:35 | bugmaster | Note Added: 0076146 | |
2018-05-23 11:35 | bugmaster | Status | reviewed => tested |
2018-05-23 11:38 | bugmaster | Test case number | => Not needed |
2018-05-24 16:02 |
|
Changeset attached | => occt master 26b004e9 |
2018-05-24 16:02 |
|
Assigned To | bugmaster => abv |
2018-05-24 16:02 |
|
Status | tested => verified |
2018-05-24 16:02 |
|
Resolution | open => fixed |
2018-05-24 18:13 | git | Note Added: 0076281 | |
2018-05-24 18:13 | git | Note Added: 0076282 | |
2018-05-24 18:13 | git | Note Added: 0076283 | |
2018-06-29 21:13 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |
2018-07-05 10:06 |
|
Category | OCCT:Samples => OCCT:Inspectors |