src/TNaming/TNaming_UsedShapes.cxx
@@ -159,7 +159,14 @@ Standard_OStream& TNaming_UsedShapes::Dump(Standard_OStream& anOS) const
   anOS<<"The content of UsedShapes attribute:"<<endl;
   TNaming_DataMapIteratorOfDataMapOfShapePtrRefShape itr(myMap);
   for (; itr.More(); itr.Next()) {
-    anOS<<"  ";
+    if (itr.Key().IsNull())
+    {
+      anOS << "Empty Shape at label =";
+      itr.Value()->Label().EntryDump(anOS);
+      anOS << endl;
+      continue;
+    }
+    anOS << "  ";
     TopAbs::Print(itr.Key().ShapeType(),anOS);
     anOS<<"  ";
     itr.Value()->Label().EntryDump(anOS);
